feat/se crea controlador inversion con las funciones solicitadas en issue#660
